--- a/Tools/projectGenerator/libs/convexDecomp.conf
+++ b/Tools/projectGenerator/libs/convexDecomp.conf
@@ -37,6 +37,8 @@ beginLibConfig( 'convexDecomp', '{4EF87A4E-16ED-4E64-BF04-841B2675AEE0}' );
       addProjectDefine( '__APPLE__' );   
    else if ( Generator::$platform == "win32" )
       addProjectDefine( 'WIN32' );
+   else if ( Generator::$platform == "linux" )
+      addProjectDefine( 'LINUX' );
 
 endLibConfig();
 
