--- a/My Projects/Alux3D/web/source/activex/IEWebGamePlugin.rc
+++ b/My Projects/Alux3D/web/source/activex/IEWebGamePlugin.rc
@@ -80,8 +80,8 @@ BEGIN
             VALUE "FileDescription", "ActiveX Web Game Plugin"
             VALUE "FileVersion", "1.0.0.1"
             VALUE "LegalCopyright", "(c) My Game Company.  All rights reserved."
-            VALUE "InternalName", "IE Full Plugin.dll"
-            VALUE "OriginalFilename", "IE Full Plugin.dll"
+            VALUE "InternalName", "IE Alux3D Plugin.dll"
+            VALUE "OriginalFilename", "IE Alux3D Plugin.dll"
             VALUE "ProductName", "My Web Game"
             VALUE "ProductVersion", "1.0"
         END
@@ -115,7 +115,7 @@ IDB_IEWEBGAMECTRL       BITMAP                  "IEWebGameCtrl.bmp"
 
 STRINGTABLE 
 BEGIN
-    IDS_PROJNAME            "IEFullPlugin"
+    IDS_PROJNAME            "IEAlux3DPlugin"
 END
 
 #endif    // English (U.S.) resources
